--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.22.0",
     "next": "11.1.2",
     "prop-types": "^15.7.2",
     "react": "17.0.2",
